testsuite/tests/typecheck/should_fail/T1899.stderr

T1899.hs:14:36: error:
    • Couldn't match type ‘a’ with ‘Proposition a0’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          transRHS :: forall a. [a] -> Int -> Constraint a
        at T1899.hs:9:2-39
      Expected type: [Proposition a0]
        Actual type: [a]
    • In the first argument of ‘Auxiliary’, namely ‘varSet’
      In the first argument of ‘Prop’, namely ‘(Auxiliary varSet)’
      In the expression: Prop (Auxiliary varSet)
    • Relevant bindings include
        varSet :: [a] (bound at T1899.hs:10:11)
        transRHS :: [a] -> Int -> Constraint a (bound at T1899.hs:10:2)
